--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "url": "https://github.com/voorjaar/windicss.git"
   },
   "keywords": [
+    "windicss",
     "tailwindcss",
     "css",
     "compiler"
