--- a/test/processor/__snapshots__/attributify.test.ts.yml
+++ b/test/processor/__snapshots__/attributify.test.ts.yml
@@ -629,6 +629,15 @@ Tools / with bg utility / css / 0: |-
   [bg~="contain"] {
     background-size: contain;
   }
+  [bg~="origin-border"] {
+    background-origin: border-box;
+  }
+  [bg~="origin-padding"] {
+    background-origin: padding-box;
+  }
+  [bg~="origin-content"] {
+    background-origin: content-box;
+  }
   [bg~="blend-normal"] {
     background-blend-mode: normal;
   }
@@ -708,6 +717,22 @@ Tools / with box utility / css / 0: |-
   }
   [box~="shadow-gray-200"] {
     --tw-shadow-color: 229, 231, 235;
+  }
+Tools / with caret utility / css / 0: |-
+  [caret~="black"] {
+    --tw-caret-opacity: 1;
+    caret-color: rgba(0, 0, 0, var(--tw-caret-opacity));
+  }
+  [caret~="white"] {
+    --tw-caret-opacity: 1;
+    caret-color: rgba(255, 255, 255, var(--tw-caret-opacity));
+  }
+  [caret~="gray-500"] {
+    --tw-caret-opacity: 1;
+    caret-color: rgba(107, 114, 128, var(--tw-caret-opacity));
+  }
+  [caret~="opacity-50"] {
+    --tw-caret-opacity: 0.5;
   }
 Tools / with container utility / css / 0: |-
   [container~="default"] {
@@ -1237,6 +1262,20 @@ Tools / with grid utility / css / 0: |-
   [grid~="row-span-2"] {
     -ms-grid-row-span: span 2 / span 2;
     grid-row: span 2 / span 2;
+  }
+Tools / with image utility / css / 0: |-
+  [image~="render-auto"] {
+    image-rendering: auto;
+  }
+  [image~="render-pixel"] {
+    -ms-interpolation-mode: nearest-neighbor;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-pixelated;
+    image-rendering: pixelated;
+  }
+  [image~="render-edge"] {
+    image-rendering: crisp-edges;
   }
 Tools / with isolation utility / css / 0: |-
   [isolation~="isolate"] {
