--- a/test/processor/__snapshots__/interpret.test.ts.yml
+++ b/test/processor/__snapshots__/interpret.test.ts.yml
@@ -185,6 +185,12 @@ Tools / interpret square brackets / square brackets / 0: |-
     --tw-bg-opacity: 1;
     background-color: rgba(34, 51, 68, var(--tw-bg-opacity));
   }
+  .bg-opacity-\[0\.11\] {
+    --tw-bg-opacity: 0.11;
+  }
+  .bg-opacity-\[var\(--value\)\] {
+    --tw-bg-opacity: var(--value);
+  }
   .border-\[\#232\] {
     --tw-border-opacity: 1;
     border-color: rgba(34, 51, 34, var(--tw-border-opacity));
@@ -192,6 +198,37 @@ Tools / interpret square brackets / square brackets / 0: |-
   .border-l-\[\#342\] {
     --tw-border-opacity: 1;
     border-color: rgba(51, 68, 34, var(--tw-border-opacity));
+  }
+  .rounded-\[11px\] {
+    border-radius: 11px;
+  }
+  .rounded-t-\[var\(--radius\)\] {
+    border-top-left-radius: var(--radius);
+    border-top-right-radius: var(--radius);
+  }
+  .rounded-r-\[var\(--radius\)\] {
+    border-top-right-radius: var(--radius);
+    border-bottom-right-radius: var(--radius);
+  }
+  .rounded-b-\[var\(--radius\)\] {
+    border-bottom-right-radius: var(--radius);
+    border-bottom-left-radius: var(--radius);
+  }
+  .rounded-l-\[var\(--radius\)\] {
+    border-top-left-radius: var(--radius);
+    border-bottom-left-radius: var(--radius);
+  }
+  .rounded-tr-\[var\(--radius\)\] {
+    border-top-right-radius: var(--radius);
+  }
+  .rounded-br-\[var\(--radius\)\] {
+    border-bottom-right-radius: var(--radius);
+  }
+  .rounded-bl-\[var\(--radius\)\] {
+    border-bottom-left-radius: var(--radius);
+  }
+  .rounded-tl-\[var\(--radius\)\] {
+    border-top-left-radius: var(--radius);
   }
   .border-\[2px\] {
     border-width: 2px;
