--- a/test/processor/__snapshots__/interpret.test.ts.yml
+++ b/test/processor/__snapshots__/interpret.test.ts.yml
@@ -181,9 +181,39 @@ Tools / interpret screen variants / screen variants / 0: |-
     }
   }
 Tools / interpret square brackets / square brackets / 0: |-
+  .space-x-\[20cm\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(20cm * var(--tw-space-x-reverse));
+    margin-left: calc(20cm * calc(1 - var(--tw-space-x-reverse)));
+  }
+  .space-x-\[calc\(20\%-1cm\)\] > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-x-reverse: 0;
+    margin-right: calc(calc(20%-1cm) * var(--tw-space-x-reverse));
+    margin-left: calc(calc(20%-1cm) * calc(1 - var(--tw-space-x-reverse)));
+  }
   .bg-\[\#234\] {
     --tw-bg-opacity: 1;
     background-color: rgba(34, 51, 68, var(--tw-bg-opacity));
+  }
+  .from-\[\#da5b66\] {
+    --tw-gradient-from: rgb(218, 91, 102);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(218, 91, 102, 0));
+  }
+  .from-\[var\(--color\)\] {
+    --tw-gradient-from: rgb(var(--color));
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(var(--color), 0));
+  }
+  .via-\[\#da5b66\] {
+    --tw-gradient-stops: var(--tw-gradient-from), rgb(218, 91, 102), var(--tw-gradient-to, rgba(218, 91, 102, 0));
+  }
+  .via-\[var\(--color\)\] {
+    --tw-gradient-stops: var(--tw-gradient-from), rgb(var(--color)), var(--tw-gradient-to, rgba(var(--color), 0));
+  }
+  .to-\[\#da5b66\] {
+    --tw-gradient-to: rgb(218, 91, 102);
+  }
+  .to-\[var\(--color\)\] {
+    --tw-gradient-to: rgb(var(--color));
   }
   .bg-opacity-\[0\.11\] {
     --tw-bg-opacity: 0.11;
@@ -233,18 +263,155 @@ Tools / interpret square brackets / square brackets / 0: |-
   .border-\[2px\] {
     border-width: 2px;
   }
+  .flex-\[var\(--flex\)\] {
+    -webkit-box-flex: 1;
+    -ms-flex: var(--flex);
+    -webkit-flex: var(--flex);
+    flex: var(--flex);
+  }
+  .flex-grow-\[var\(--grow\)\] {
+    -webkit-box-flex: var(--grow);
+    -ms-flex-positive: var(--grow);
+    -webkit-flex-grow: var(--grow);
+    flex-grow: var(--grow);
+  }
+  .flex-shrink-\[var\(--shrink\)\] {
+    -ms-flex-negative: var(--shrink);
+    -webkit-flex-shrink: var(--shrink);
+    flex-shrink: var(--shrink);
+  }
+  .h-\[3\.23rem\] {
+    height: 3.23rem;
+  }
+  .h-\[calc\(100\%\+1rem\)\] {
+    height: calc(100%+1rem);
+  }
+  .h-\[var\(--width\)\] {
+    height: var(--width);
+  }
   .text-\[1\.5rem\] {
     font-size: 1.5rem;
     line-height: 1;
   }
+  .leading-\[var\(--leading\)\] {
+    line-height: var(--leading);
+  }
   .m-\[-11rem\] {
     margin: -11rem;
+  }
+  .m-\[7px\] {
+    margin: 7px;
+  }
+  .my-\[7px\] {
+    margin-top: 7px;
+    margin-bottom: 7px;
+  }
+  .mx-\[7px\] {
+    margin-left: 7px;
+    margin-right: 7px;
   }
   .\!mt-\[10px\] {
     margin-top: 10px !important;
   }
+  .mt-\[7px\] {
+    margin-top: 7px;
+  }
+  .mr-\[7px\] {
+    margin-right: 7px;
+  }
+  .mb-\[7px\] {
+    margin-bottom: 7px;
+  }
+  .ml-\[7px\] {
+    margin-left: 7px;
+  }
+  .mt-\[clamp\(30px\2c 100px\)\] {
+    margin-top: clamp(30px,100px);
+  }
+  .max-h-\[3\.23rem\] {
+    max-height: 3.23rem;
+  }
+  .max-h-\[calc\(100\%\+1rem\)\] {
+    max-height: calc(100%+1rem);
+  }
+  .max-h-\[var\(--width\)\] {
+    max-height: var(--width);
+  }
+  .max-w-\[3\.23rem\] {
+    max-width: 3.23rem;
+  }
+  .max-w-\[calc\(100\%\+1rem\)\] {
+    max-width: calc(100%+1rem);
+  }
+  .max-w-\[var\(--width\)\] {
+    max-width: var(--width);
+  }
+  .min-h-\[3\.23rem\] {
+    min-height: 3.23rem;
+  }
+  .min-h-\[calc\(100\%\+1rem\)\] {
+    min-height: calc(100%+1rem);
+  }
+  .min-h-\[var\(--width\)\] {
+    min-height: var(--width);
+  }
+  .min-w-\[3\.23rem\] {
+    min-width: 3.23rem;
+  }
+  .min-w-\[calc\(100\%\+1rem\)\] {
+    min-width: calc(100%+1rem);
+  }
+  .min-w-\[var\(--width\)\] {
+    min-width: var(--width);
+  }
+  .opacity-\[var\(--opacity\)\] {
+    opacity: var(--opacity);
+  }
+  .outline-\[var\(--outline\)\] {
+    outline: 2px dotted rgb(var(--outline));
+    outline-offset: 2px;
+  }
   .p-\[30em\] {
     padding: 30em;
+  }
+  .p-\[var\(--app-padding\)\] {
+    padding: var(--app-padding);
+  }
+  .placeholder-\[var\(--placeholder\)\]::-webkit-input-placeholder {
+    color: var(--placeholder);
+  }
+  .placeholder-\[var\(--placeholder\)\]::-moz-placeholder {
+    color: var(--placeholder);
+  }
+  .placeholder-\[var\(--placeholder\)\]:-ms-input-placeholder {
+    color: var(--placeholder);
+  }
+  .placeholder-\[var\(--placeholder\)\]::-ms-input-placeholder {
+    color: var(--placeholder);
+  }
+  .placeholder-\[var\(--placeholder\)\]::placeholder {
+    color: var(--placeholder);
+  }
+  .placeholder-opacity-\[var\(--placeholder\)\]::-webkit-input-placeholder {
+    --tw-placeholder-opacity: var(--placeholder);
+  }
+  .placeholder-opacity-\[var\(--placeholder\)\]::-moz-placeholder {
+    --tw-placeholder-opacity: var(--placeholder);
+  }
+  .placeholder-opacity-\[var\(--placeholder\)\]:-ms-input-placeholder {
+    --tw-placeholder-opacity: var(--placeholder);
+  }
+  .placeholder-opacity-\[var\(--placeholder\)\]::-ms-input-placeholder {
+    --tw-placeholder-opacity: var(--placeholder);
+  }
+  .placeholder-opacity-\[var\(--placeholder\)\]::placeholder {
+    --tw-placeholder-opacity: var(--placeholder);
+  }
+  .inset-\[11px\] {
+    top: 11px;
+    right: 11px;
+    bottom: 11px;
+    left: 11px;
   }
   .ring-\[4px\] {
     --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
@@ -252,9 +419,34 @@ Tools / interpret square brackets / square brackets / 0: |-
     -webkit-box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
     box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   }
+  .ring-\[10px\] {
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(10px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  }
+  .ring-offset-\[\#76ad65\] {
+    --tw-ring-offset-color: rgb(118, 173, 101);
+  }
   .ring-\[\#34123250\] {
     --tw-ring-opacity: 0.3137254901960784;
     --tw-ring-color: rgba(52, 18, 50, var(--tw-ring-opacity));
+  }
+  .ring-\[\#76ad65\] {
+    --tw-ring-opacity: 1;
+    --tw-ring-color: rgba(118, 173, 101, var(--tw-ring-opacity));
+  }
+  .ring-opacity-\[var\(--ring-opacity\)\] {
+    --tw-ring-opacity: var(--ring-opacity);
+  }
+  .fill-\[\#1c1c1e\] {
+    fill: rgb(28, 28, 30);
+  }
+  .fill-\[var\(--color\)\] {
+    fill: var(--color);
+  }
+  .stroke-\[\#da5b66\] {
+    stroke: rgb(218, 91, 102);
   }
   .text-\[\#9254d2\] {
     --tw-text-opacity: 1;
@@ -272,12 +464,77 @@ Tools / interpret square brackets / square brackets / 0: |-
     --tw-text-opacity: 1;
     color: rgba(255, 0, 0, var(--tw-text-opacity));
   }
+  .tracking-\[var\(--tracking\)\] {
+    letter-spacing: var(--tracking);
+  }
   .w-\[51vw\] {
     width: 51vw;
+  }
+  .w-\[3\.23rem\] {
+    width: 3.23rem;
+  }
+  .w-\[calc\(100\%\+1rem\)\] {
+    width: calc(100%+1rem);
+  }
+  .w-\[var\(--width\)\] {
+    width: var(--width);
   }
   .gap-\[4rem\] {
     grid-gap: 4rem;
     gap: 4rem;
+  }
+  .col-\[7\] {
+    -ms-grid-column-span: span 7 / span 7;
+    grid-column: span 7 / span 7;
+  }
+  .col-start-\[7\] {
+    grid-column-start: 7;
+  }
+  .col-end-\[7\] {
+    grid-column-end: 7;
+  }
+  .row-\[7\] {
+    -ms-grid-row-span: span 7 / span 7;
+    grid-row: span 7 / span 7;
+  }
+  .row-start-\[7\] {
+    grid-row-start: 7;
+  }
+  .row-end-\[7\] {
+    grid-row-end: 7;
+  }
+  .rotate-\[23deg\] {
+    --tw-rotate: 23deg;
+  }
+  .rotate-\[2\.3rad\] {
+    --tw-rotate: 2.3rad;
+  }
+  .rotate-\[401grad\] {
+    --tw-rotate: 401grad;
+  }
+  .rotate-\[1\.5turn\] {
+    --tw-rotate: 1.5turn;
+  }
+  .skew-x-\[3px\] {
+    --tw-skew-x: 3px;
+  }
+  .skew-y-\[3px\] {
+    --tw-skew-y: 3px;
+  }
+  .duration-\[2s\] {
+    -webkit-transition-duration: 2s;
+    -o-transition-duration: 2s;
+    transition-duration: 2s;
+  }
+  .duration-\[var\(--app-duration\)\] {
+    -webkit-transition-duration: var(--app-duration);
+    -o-transition-duration: var(--app-duration);
+    transition-duration: var(--app-duration);
+  }
+  .delay-\[var\(--delay\)\] {
+    -webkit-transition-delay: var(--delay);
+    -o-transition-delay: var(--delay);
+    transition-delay: var(--delay);
   }
   .blur-\[11px\] {
     --tw-blur: blur(11px);
