--- a/test/plugin/__snapshots__/typography.test.ts.yml
+++ b/test/plugin/__snapshots__/typography.test.ts.yml
@@ -241,10 +241,12 @@ Tools / interpret test / css / 0: |-
   .prose ol {
     margin-top: 1.25em;
     margin-bottom: 1.25em;
+    list-style-type: none;
   }
   .prose ul {
     margin-top: 1.25em;
     margin-bottom: 1.25em;
+    list-style-type: none;
   }
   .prose li {
     margin-top: 0.5em;
@@ -1349,10 +1351,12 @@ Tools / with extend / css / 0: |-
   .prose ol {
     margin-top: 1.25em;
     margin-bottom: 1.25em;
+    list-style-type: none;
   }
   .prose ul {
     margin-top: 1.25em;
     margin-bottom: 1.25em;
+    list-style-type: none;
   }
   .prose li {
     margin-top: 0.5em;
@@ -1651,10 +1655,12 @@ Tools / with multi selector / css / 0: |-
   .prose ol {
     margin-top: 1.25em;
     margin-bottom: 1.25em;
+    list-style-type: none;
   }
   .prose ul {
     margin-top: 1.25em;
     margin-bottom: 1.25em;
+    list-style-type: none;
   }
   .prose li {
     margin-top: 0.5em;
